err/spyne-delegate.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/spyne'...
Listing './lib/python3.5/site-packages/spyne/auxproc'...
Listing './lib/python3.5/site-packages/spyne/client'...
Listing './lib/python3.5/site-packages/spyne/client/twisted'...
Listing './lib/python3.5/site-packages/spyne/const'...
Listing './lib/python3.5/site-packages/spyne/interface'...
Listing './lib/python3.5/site-packages/spyne/interface/wsdl'...
Listing './lib/python3.5/site-packages/spyne/interface/xml_schema'...
Listing './lib/python3.5/site-packages/spyne/model'...
Listing './lib/python3.5/site-packages/spyne/model/primitive'...
Listing './lib/python3.5/site-packages/spyne/protocol'...
Listing './lib/python3.5/site-packages/spyne/protocol/cloth'...
Listing './lib/python3.5/site-packages/spyne/protocol/dictdoc'...
Listing './lib/python3.5/site-packages/spyne/protocol/html'...
Listing './lib/python3.5/site-packages/spyne/protocol/soap'...
Listing './lib/python3.5/site-packages/spyne/server'...
Listing './lib/python3.5/site-packages/spyne/server/twisted'...
Listing './lib/python3.5/site-packages/spyne/store'...
Listing './lib/python3.5/site-packages/spyne/store/relational'...
Listing './lib/python3.5/site-packages/spyne/test'...
Listing './lib/python3.5/site-packages/spyne/test/interface'...
Listing './lib/python3.5/site-packages/spyne/test/interface/wsdl'...
Listing './lib/python3.5/site-packages/spyne/test/interop'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server/soap11'...
Listing './lib/python3.5/site-packages/spyne/test/interop/server/soap12'...
Listing './lib/python3.5/site-packages/spyne/test/model'...
Listing './lib/python3.5/site-packages/spyne/test/multipython'...
Listing './lib/python3.5/site-packages/spyne/test/multipython/model'...
Listing './lib/python3.5/site-packages/spyne/test/protocol'...
Listing './lib/python3.5/site-packages/spyne/test/transport'...
Compiling './lib/python3.5/site-packages/spyne/test/transport/test_msgpack.py'...
***   File "./lib/python3.5/site-packages/spyne/test/transport/test_msgpack.py", line 57
    print repr(val)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spyne/util'...
Listing './lib/python3.5/site-packages/spyne/util/oset'...
Listing './lib/python3.5/site-packages/spyne-2.12.14.egg-info'...
Listing './lib/python3.5/site-packages/spyne_delegate-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/spynedelegate'...
Listing './share'...
Listing './share/python-wheels'...
